--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_svg: ^0.23.0+1
+  dots_indicator: ^2.0.0
+
 
 
 # For information on the generic Dart part of this file, see the
